<resources>
    <string name="app_name">Student</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="username_hint">e-mail</string>
    <string name="passwords">Password</string>
    <string name="loginbutton">LOG IN</string>
    <!-- GCM Sender ID -->
    <string name="sender_id">id:227285192665</string>

    <string name="signuplabel">Dont Have an Account? Register Now!</string>

    <string name="title_activity_signup">Student</string>

    <string name="signuperror">You Just Missed Something</string>
    <string name="serrortext">Try Again!</string>
    <string name="loginerror">Invalid Username or Password</string>
    <string name="lerrortext">Try Again!</string>
    <string name="title_activity_nav">NavActivity</string>


    <string name="imagebk">Date of Birth</string>
    <string name="firstnamelabel">First Name</string>
    <string name="secondnamelabel">Second Name</string>
    <string name="semesterlabel">Semester</string>
    <string name="departmentlabel">College</string>
    <string name="admnnolabel">Admission No</string>
    <string name="contactlabel">Contact No</string>
    <string name="doblabel">Address</string>
    <string name="emaillabel">E-mail</string>
    <string name="passlabel">Password</string>
    <string name="registerlabel">REGISTER</string>
    <string name="registerbtnlabel">Register</string>
    <string name="femalelabel">Female</string>
    <string name="malelabel">Male</string>
    <string name="genderflabel">Gender</string>
    <string name="genmlab">Gender</string>
    <string name="title_activity_ddd">Sign in</string>

    <string name="title_activity_news_feed">NewsFeedActivity</string>
    <string name="title_activity_eazy_campus">EazyCampusActivity</string>
    <string name="title_activity_kerala_u">MGUActivity</string>
    <string name="title_activity_eazy_check">EazyCheckActivity</string>
    <string name="title_activity_check">check</string>
    <string name="title_activity_documents">Documents</string>
    <string name="title_activity_syallbus">Syallbus</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_newsfeed">Newsfeed</string>
    <string name="title_activity_mechanical">Mechanical</string>
    <string name="title_activity_computer">Computer</string>
    <string name="title_activity_civil">Civil</string>
    <string name="title_activity_electrical">Electrical</string>
    <string name="title_activity_electronics">Electronics</string>
    <string name="title_activity_smech">Mechanical Syllabus</string>
    <string name="title_activity_scs">Computer Science Syllabus</string>
    <string name="title_activity_scivil">Civil Syllabus </string>
    <string name="title_activity_selec">Electrical Syllabus</string>
    <string name="title_activity_sec">Electronics Syllabus</string>
    <string name="title_activity_year">Year</string>


    <string name="action_leave">Leave</string>
    <string name="action_send">Send</string>
    <string name="prompt_message">Message</string>

    <string name="error_connect">Failed to connect</string>

    <!-- messages -->
    <string name="message_welcome">Welcome to Socket.IO Chat –</string>
    <plurals name="message_participants">
        <item quantity="one">there\'s %d participant</item>
        <item quantity="other">there are %d participants</item>
    </plurals>
    <string name="message_user_joined">%s joined</string>
    <string name="message_user_left">%s left</string>
    <string name="user_action_typing">is typing</string>
    <string name="title_activity_c10">Year</string>
    <string name="title_activity_ics10">Computer</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_information">Information</string>
    <string name="title_activity_sit">Sit</string>
    <string name="title_activity_result">Result</string>
    <string name="title_activity_web">Web</string>
    <string name="title_activity_tech">Tech</string>
    <string name="type_msg">Type message</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="forgot_my_pwd">I’ve forgotten my password?</string>
    <string name="my_chats">My Chats</string>
    <string name="all_chats">All Chats</string>
    <string name="search">Search</string>
    <string name="to">To:</string>
    <string name="edit">Edit</string>
    <string name="new_chat">New Chat</string>
    <string name="alert_wait">Please wait...</string>
    <string name="err_fields_empty">Please fill all the fields.</string>
    <string name="err_singup">Error occurred while signup:</string>
    <string name="err_login">Error occurred while login:</string>
    <string name="err_users">Error occurred while finding users:</string>
    <string name="alert_loading">Loading...</string>
    <string name="msg_no_user_found">No users found for chat!</string>


</resources>
