<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"




    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".log"
    tools:showIn="@layout/activity_logins">
    <ImageView


        android:id="@+id/imageView2"
        android:src="@drawable/loginbck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:scaleType="fitXY"
        android:layout_alignParentTop="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/logintitle"
        android:textSize="45sp"
        android:textColor="@android:color/white"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"

        android:id="@+id/loginhelp"
        android:textSize="18sp"
        android:textColor="@android:color/white"


        android:layout_below="@+id/logintitle"
        android:layout_centerHorizontal="true" />
    <LinearLayout
        android:id="@+id/edittextlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/loginhelp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@android:color/white"
        android:paddingLeft="@dimen/loginhoriz"
        android:paddingRight="@dimen/loginhoriz"
        android:paddingTop="@dimen/loginverti"
        android:paddingBottom="@dimen/loginverti"
        >

        <EditText

            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/usernamefield"
            android:inputType="textEmailAddress"
            android:hint="@string/username_hint"
            android:ems="10"
            android:textColorHint="@color/gre"
          android:drawableLeft="@drawable/username"
            android:background="@drawable/apptheme_edit_text_holo_light"

            android:drawablePadding="20dp"
            android:textSize="17sp"


            android:textColor="#282828" />

        <EditText
            android:layout_width="match_parent"
            android:background="@drawable/apptheme_edit_text_holo_light"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordfield"
            android:hint="@string/password"

            android:textColorHint="@color/gre"
            android:textSize="17sp"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="20dp"

            android:textColor="#1d1d1d" />


    </LinearLayout>



    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/loginbutton"
        android:id="@+id/button"
        android:layout_below="@+id/edittextlayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textColor="@android:color/white"
        android:background="@drawable/button_custom"
        android:textSize="15sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signuplabel"
        android:id="@+id/signuplabel"
        android:textColor="@android:color/white"
        android:textSize="16sp"

        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp" />



</RelativeLayout>
