

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.production.iedc.tkmdashboard.signupActivity"
    tools:showIn="@layout/activity_signup">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView2"
        android:src="@drawable/loginbck"
        android:scaleType="fitXY"
        android:layout_alignParentTop="true" />
    <LinearLayout
        android:id="@+id/edittextlayouts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_marginTop="205dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/emailid"
        android:inputType="textEmailAddress"
        android:hint="@string/emaillabel"
        android:ems="10"
        android:textColorHint="@color/gre"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="20dp"
        android:textSize="17sp"
        android:layout_marginTop="10dp"
        android:background="@drawable/apptheme_edit_text_holo_light"
        android:textColor="#494444" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/passwordid"
            android:inputType="textPassword"
            android:hint="@string/passlabel"
            android:ems="10"
            android:textColorHint="@color/gre"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="20dp"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:background="@drawable/apptheme_edit_text_holo_light"
            android:textColor="#494444" />












    </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registerlabel"
            android:id="@+id/registerid"
            android:onClick="saveInfo"
            android:textColor="@android:color/white"
            android:background="@drawable/button_custom"
            android:textSize="15sp"
            android:layout_marginTop="31dp"
            android:layout_below="@+id/edittextlayouts"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Complete Registration"
            android:id="@+id/register"
            android:onClick="saveInfo"
            android:textColor="@android:color/white"
            android:background="@drawable/button_custom"
            android:textSize="15sp"
            android:layout_below="@+id/registerid"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />



</RelativeLayout>



</ScrollView>
